--- a/index.html
+++ b/index.html
@@ -420,8 +420,9 @@
               <p class="pt-3">Our IT Services Portfolio</p>
               </h2>
             </div>
-            <button
-              class="btn bg-btnColor text-white rounded-none rounded-tr-xl rounded-bl-xl hover:btn-outline hover:border-btnColor hover:bg-white hover:text-btnColor hover:rounded-none hover:rounded-tl-xl hover:rounded-br-xl transition duration-500"
+            <button        
+            onclick="window.location.href='allService.html'"    
+              class="btn bg-btnColor text-white rounded-none rounded-tr-xl rounded-bl-xl hover:btn-outline hover:border-btnColor hover:bg-white hover:text-btnColor hover:rounded-none hover:rounded-tl-xl hover:rounded-br-xl transition duration-500 "
             >
               All Service
             </button>
