--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/smooth-scroll@16/dist/smooth-scroll.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="style.css">
 
     <!-- tailwind customize  -->
 
@@ -44,43 +45,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- custom style  -->
-
-    <style>
-      /* imported fonts  */
-
-      @import url("https://fonts.googleapis.com/css2?family=EB+Garamond:wght@800&family=Poppins:wght@400;500;600;700;800&display=swap");
-
-      .font-poppins {
-        font-family: "Poppins", sans-serif;
-      }
-      .font-garamond {
-        font-family: "EB Garamond", serif;
-      }
-
-      
-      .technologyIndex {
-        background-image: url(./images/bg-s2-home3.jpg);
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-      }
-      .buildYourWebsite {
-        background-image: url(./images/bg.jpg);
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-      }
-      .consultant {
-        background-image: url(./images/consultation.jpg);
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-      }
-      .transitionEase {
-        transition: left 0.5s ease;
-      }
-    </style>
+  
   </head>
   <body class="font-poppins">
     <header class=" mx-auto">
