--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <div data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease-in-out" class="space-y-6 max-w-3xl mx-auto">
 
                 <p
-                  class=" border-2 border-btnColor w-60 mx-auto py-4 rounded-tl-xl rounded-br-xl text-white"
+                  class=" border-2 border-btnColor w-60 mx-auto py-4 rounded-tl-xl rounded-br-xl text-white cursor-default"
                 >
                   Our Vision
                 </p>
