Implement project images and add preloading

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
   
   </head>
   <body class="font-poppins">
+    <div class="preloader">
+      <div class="loader"></div>
+  </div>
     <header class=" mx-auto">
       <!-- start navbar section  -->
 
@@ -883,6 +886,8 @@
           </div>
         </section>
         <!-- End Package Section -->
+
+        
     
 
 
