Import new images for logo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="./images/business.png"
+      href="./images/minimatic-icon.png"
       type="image/x-icon"
     />
     <title>Minimatic Solution</title>
@@ -58,7 +58,7 @@
         </defs>
         <circle class="path" cx="50" cy="50" r="45" fill="none" stroke-width="5"></circle>
     </svg>
-        <img src="./images/logo.webp" class="loader-logo" alt="logo">
+        <img src="./images/minimatic-icon.png" class="loader-logo" alt="logo">
         <div class="loading-text">Loading<span class="loading-dots"></span></div>
     </div>
 </div>
